<resources>
    <string name="app_name">TicTacToe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_game">Play Game</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="impossible">IMPOSSIBLE</string>
    <string name="deep_thought">Deep Thought</string>
    <string name="marvin">Marvin</string>
    <string name="eddie_the_computer">Eddie the Computer</string>
    <string name="points">Points</string>
    <string name="button_top_left">button top left</string>
    <string name="button_top_midle">button top midle</string>
    <string name="button_top_right">button top right</string>
    <string name="button_middle_left">button middle left</string>
    <string name="button_middle_middle">button middle middle</string>
    <string name="button_middle_rigth">button middle rigth</string>
    <string name="button_bottom_left">button bottom left</string>
    <string name="button_bottom_middle">button bottom middle</string>
    <string name="button_bottom_rigth">button bottom rigth</string>
    <string name="hard">HARD</string>
    <string name="play_against">Play Against</string>
    <string name="player_vs_player">Player vs Player</string>
    <string name="player_vs_computer">Player vs Computer</string>
    <string name="high_score">High Score</string>
    <string name="choose_or_create_a_player">Choose or create a player</string>
    <string name="write_your_name_if_you_don_t_have_a_user">Write your name if you don\'t have a user</string>
    <string name="choose_player_1">Choose Player 1</string>
    <string name="choose_player_2">Choose Player 2</string>
    <string name="add_player_two">Add player two</string>
    <string name="add_player_one">add player one</string>
    <string name="add_new_player">Add new player</string>
    <string name="choose_player1">Choose Player 1</string>
    <string name="choose_player2">Choose Player 2</string>
    <string name="choose_player">Choose Player</string>
    <string name="choose_ai">Choose AI</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="game_is_over">Game is over!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello World</string>
    <string name="don_t_panic">Don\'t Panic</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play_pause_button">play pause button</string>
    <string name="name">Name</string>
    <string name="wins">Wins</string>
    <string name="score">Score</string>
</resources>
