<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="400sp"
        android:layout_height="500sp"
        tools:context=".model.SetUpGameAgainstAIFragment"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:background="@drawable/background_with_shadow"
        android:elevation="2dp"
>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_player_1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
    />

   <Spinner
           android:id="@+id/choose_player1_spinner"
           android:layout_width="match_parent"
           android:layout_height="50sp"
           android:layout_marginBottom="15sp"
           android:layout_marginStart="20sp"
           android:layout_marginEnd="20sp"
   />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="20sp"
            android:gravity="center_vertical"
            android:layout_marginBottom="20sp"
    >
        <EditText
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:hint="@string/write_your_name_if_you_don_t_have_a_user"
                android:inputType="text"
        />
        <ImageButton
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@drawable/roundcorner"
                android:src="@drawable/ic_add_24dp"
                android:contentDescription="@string/add_player_one"
        />

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_player_2"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"
    />

    <Spinner
            android:id="@+id/choose_player2_spinner"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="15sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="20sp"
            android:gravity="center_vertical"
            android:layout_marginBottom="20sp"
    >
        <EditText
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:inputType="text"
                android:hint="@string/write_your_name_if_you_don_t_have_a_user"
        />
        <ImageButton
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@drawable/roundcorner"
                android:src="@drawable/ic_add_24dp"
                android:contentDescription="@string/add_player_two"
        />

    </LinearLayout>


    <Button
            android:id="@+id/game_pvp_button"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="#fff"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_game"
    />
</LinearLayout>