<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="400sp"
        android:layout_height="500sp"
        tools:context=".controller.SetUpGameAgainstAIFragment"
        android:orientation="vertical"
        android:gravity="center|center_horizontal"
        android:layout_gravity="center"
        android:background="@drawable/background_with_shadow"
        android:elevation="2dp"
>

    <TextView
            android:id="@+id/title_text"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deep_thought"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_marginBottom="20sp"
    />

    <TextView
            android:text="@string/points"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />
    <TextView
            android:id="@+id/points"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="10sp"
    />
    <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/ai_description"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:gravity="center"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="20sp"
    />
    <RadioGroup
            android:id="@+id/game_mode_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/easy"
                android:text="@string/easy"
                android:textColor="@color/white"
                android:layout_marginEnd="20sp"
                android:checked="false"
                android:buttonTint="@color/colorAccentDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/medium"
                android:text="@string/hard"
                android:textColor="@color/white"
                android:layout_marginEnd="20sp"
                android:checked="false"
                android:buttonTint="@color/colorAccentDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/hard"
                android:text="@string/impossible"
                android:textColor="@color/white"
                android:checked="true"
                android:buttonTint="@color/colorAccentDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
    </RadioGroup>
    <Button
            android:id="@+id/set_up_game_against_ai_button"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="#fff"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_game"
    />
</LinearLayout>