<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:transitionGroup="false"
        android:clipChildren="false"
        tools:context=".model.MainMenuFragment"
        android:gravity="center"
>

    <LinearLayout
            android:id="@+id/game_button_manager"
            android:background="@drawable/background_with_shadow"
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:orientation="vertical"
            android:gravity="center"
            android:elevation="5dp"
    >
        <Button
                android:id="@+id/pvp_button"
                android:textColor="@color/white"
                android:text="@string/player_vs_player"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccentLight"
                android:layout_marginBottom="10sp"
        />

        <Button
                android:id="@+id/pvai_button"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/player_vs_computer"
                android:background="@color/colorAccent"
                android:layout_marginBottom="10sp"
                android:textColor="@color/white"
        />

        <Button
                android:id="@+id/high_score_button"
                android:textColor="@color/white"
                android:text="@string/high_score"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccentDark"
        />

    </LinearLayout>


</LinearLayout>