<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:name="com.example.tictactoe.model.HighScoreFragment"
        android:elevation="2dp"
        android:background="@drawable/background_with_shadow"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:context=".controller.HighScoreFragment"
        android:layout_width="wrap_content"
        android:layout_height="500sp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="20sp"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_marginEnd="120sp"
            android:gravity="center"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins"
                android:textSize="20sp"
                android:layout_marginEnd="20sp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="20sp"
        />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            tools:listitem="@layout/fragment_person"
    />

</LinearLayout>
